# esp-tflite-micro

examples/micro_speech/main/: CMakeLists.txt  audio_provider.cc  feature_provider.cc  main.cc  tcp_client.c  tcp_client.h  tcp_server.c  wifi.c
examples/person_detection/: tcp_image_server.py
examples/person_detection/main/: CMakeLists.txt  esp_cli.c  main.cc  tcp_client.c  tcp_client.h
examples/person_detection/static_images/: CMakeLists.txt
